增加缺失数据处理

--- a/数据归档.ipynb
+++ b/数据归档.ipynb
@@ -54,7 +54,10 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "c57650ba-1d54-4305-a75c-4feaaae2fdb4",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true,
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "systime = time.localtime(time.time())\n",
@@ -62,7 +65,10 @@
     "\n",
     "should = pd.date_range('2022-1-1', nowDate, freq='H')\n",
     "exist = pd.to_datetime([f.stem for f in file_list])\n",
-    "print(set(should) - set(exist))"
+    "tmp = list(set(should) - set(exist))\n",
+    "tmp.sort()\n",
+    "for t in tmp:\n",
+    "    print(t)"
    ]
   },
   {
@@ -243,7 +249,12 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "06a39438-f810-4bf3-b090-0eb4f10e1513",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "ds['co'] = ds['co']*1000\n",
@@ -329,6 +340,49 @@
     "    df.drop_duplicates(inplace=True)\n",
     "    if df.duplicated(subset='stationcode').sum() > 0:\n",
     "        print(df[df.duplicated(subset='stationcode', keep=False)].T)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cf834a73-b71c-4d33-8a46-914f5a2b482f",
+   "metadata": {},
+   "source": [
+    "服务器分别在每小时第13、43分钟爬取的，这里批量合并下两者"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3b5663ae-d9f3-47bf-a3f5-5a8e3551af0f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dir_root = Path('/media/qin/QIN3/cnemc_comparison/heqin_server/qin_2022')\n",
+    "files = list((dir_root/'13').rglob('*csv'))\n",
+    "files.sort()\n",
+    "\n",
+    "for f1 in files[:]:\n",
+    "    files_ = list((dir_root/'43').rglob(f1.name))\n",
+    "    if len(files_) > 0:\n",
+    "        f2 = files_[0]\n",
+    "\n",
+    "        h1 = hashlib.md5(open(f1, \"rb\").read()).hexdigest()\n",
+    "        h2 = hashlib.md5(open(f2, \"rb\").read()).hexdigest()\n",
+    "\n",
+    "        if h1 == h2:\n",
+    "            print(f1, 'f1 == f2', h1)\n",
+    "            f2.unlink()\n",
+    "        else:\n",
+    "            t1 = f1.read_text()\n",
+    "            t2 = '\\n'.join(f2.read_text().splitlines()[1:])\n",
+    "            f1.unlink()\n",
+    "            f2.unlink()\n",
+    "            f1.write_text(t1+t2)\n",
+    "\n",
+    "            df = pd.read_csv(f1, parse_dates=['timepoint'])\n",
+    "            df.drop_duplicates(inplace=True)\n",
+    "            if df.duplicated(subset='stationcode').sum() > 0:\n",
+    "                print(df[df.duplicated(subset='stationcode', keep=False)].T)"
    ]
   }
  ],
