结合数据解释臭氧含义

--- a/数据归档.ipynb
+++ b/数据归档.ipynb
@@ -239,6 +239,34 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f15d21c5-86b7-4b98-b4cd-7fc546ff0825",
+   "metadata": {},
+   "source": [
+    "### 臭氧数据含义解释"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "651dde8c-a53e-49ec-8a16-ffebdba17d6a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = ds.sel(stationcode='1702A').to_dataframe()\n",
+    "\n",
+    "T = 77\n",
+    "print(df[T-24+1:T+1]['o3_24h'].max())  # 对应下面的 o3（不用管是否是自然日都成立）\n",
+    "print(df[T-8+1:T+1]['o3_24h'].mean())  # 对应下面的 o3_8h_24h（只在 T8-T0/24 内成立）\n",
+    "\n",
+    "HoD = int(df[T:T+1].index.hour[0])  # Hour of Day\n",
+    "print(df[T-min(HoD, 8)+1:T+1]['o3_24h'].mean())  # 对应下面的 o3_8h_24h（补充考虑了 T1-T7）\n",
+    "print(df[T-HoD+1:T+1]['o3_8h_24h'].max())  # 对应下面的 o3_8h\n",
+    "\n",
+    "df[T:T+1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "d6610b0e-08a8-4b04-8d45-13bd70bf9adf",
    "metadata": {},
    "source": [
@@ -250,9 +278,6 @@
    "execution_count": null,
    "id": "06a39438-f810-4bf3-b090-0eb4f10e1513",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [],
