过滤小文件

--- a/conWCFarcCSV.ipynb
+++ b/conWCFarcCSV.ipynb
@@ -81,6 +81,20 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0c7df5ae-9919-4b5a-b415-53288e4f366e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 如果有过小的文件则直接删除，并重新运行下上面的文件列表\n",
+    "for i, f in enumerate(fileList):\n",
+    "    if f.stat().st_size <= 264:\n",
+    "        print(i, f, f.stat().st_size)\n",
+    "        !mv {f} error"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "9b59634b-5ba8-4586-abc6-3f142fa2da7d",
    "metadata": {},
